# woflang-alpha-r

./: CHANGELOG.md  README.md  SECURITY.md  choices-to-go.md  history.md  rs-v.0.1.1.tar
cpp-v10.1.1/: CHANGELOG.md  README.md  (+1 more)
cpp-v10.1.1/plugins/: CMakeLists-adds.txt  CMakeLists.txt  README-plugins.md  easter_egg_test_suitre.cpp  example-archetypal-plugin.cpp  file-structure-plugins.md  future-adds.md  implementations.md  testing.md
cpp-v10.1.1/plugins/arts/: CMakeLists.txt  music.cpp  music_ops.cpp
cpp-v10.1.1/plugins/constants/: CMakeLists.txt  constants_ops.cpp
cpp-v10.1.1/plugins/crypto/: CMakeLists.txt  crypto_div_trial._ops.cpp  crypto_div_trial_ops.cpp  crypto_ops.cpp  modexp_ops.cpp  prime_heck_ops.cpp  prime_ops.cpp
cpp-v10.1.1/plugins/equation_solver/: CMakeLists.txt  symbolic_calc_ops.cpp  symbolic_linear_solve_ops.cpp  symbolic_logic_ops.cpp  symbolic_pattern_solve_ops.cpp  symbolic_rules_simplify_ops.cpp  symbolic_solver_ops.cpp
cpp-v10.1.1/plugins/games/: CMakeLists.txt  neural_chess_ganlgion.py  neural_chess_ops.cpp  simple_chess_ops.cpp
cpp-v10.1.1/plugins/graph/: CMakeLists.txt  graph_coloring_ops.cpp  graph_search_ops.cpp  graph_shortest_path_ops.cpp  graph_theory_ops.cpp  shortest_path_ops.cpp
cpp-v10.1.1/plugins/language/: CMakeLists.txt  cyrillic_ops.cpp  kanji_ops.cpp
cpp-v10.1.1/plugins/logic/: CMakeLists.txt  category_theory_ops.cpp  logic_ops.cpp  logic_ops.hpp
cpp-v10.1.1/plugins/markov/: CMakeLists.txt  markov_suggest_math_ops.cpp  markov_suggest_ops.cpp
cpp-v10.1.1/plugins/math/: CMakeLists.txt  calculus_ops.cpp  diff_ops.cpp  discrete_math_ops.cpp  expo_log_ops.cpp  fractal_ops.cpp  geom_transform_ops.cpp  gradient_hessian_ops.cpp  math_greek_ops.cpp  math_ops.cpp  numeric_diff_ops.cpp  numerical_diff_ops.cpp  trig_ops.cpp
cpp-v10.1.1/plugins/metaphysics/: CMakeLists.txt  duality_ops.cpp  entropy_ops.cpp  learning_mode_ops.cpp  needs-what.txt  over_unity_ops.cpp
cpp-v10.1.1/plugins/missing/: numeric_diff_ops.cpp  prime_ops.cpp
cpp-v10.1.1/plugins/quantum/: CMakeLists.txt  quantum_ops.cpp
cpp-v10.1.1/plugins/restore/: assert_op.cpp  category_theory_ops.cpp  chemistry_ops.cpp  discrete_math_ops.cpp  entropy_op.cpp  fractal_ops.cpp  geom_transform_ops.cpp  gradient_hessian_ops.cpp  graph_coloring_ops.cpp  graph_search_ops.cpp  graph_theory_ops.cpp  logic_ops.cpp  math_greek_ops.cpp  modexp_ops.cpp  moses_op.cpp  music.cpp  neural_chess_brain.cpp  numerica_differentianion.cpp  prophecy_op.cpp  shortest_path_ops.cpp  simple_chess_ops.cpp  stack_ops.cpp
cpp-v10.1.1/plugins/science/: CMakeLists.txt  chemistry_ops.cpp
cpp-v10.1.1/plugins/sigil-utils/: CMakeLists.txt  forbidden_stack_slayer_ops.cpp  mirror_ops.cpp  sigil_map_ops.cpp  stack_slayer_ops.cpp  stack_void_division_ops.cpp  stack_void_divison_ops.cpp  void_division_ops.cpp  wofl_sigil_ops.cpp
cpp-v10.1.1/plugins/sigils/: CMakeLists.txt  chaos_unlock_ops.cpp  deity_ops.cpp  dreaming_ops.cpp  dreamlog_ops.cpp  egg_ops.cpp  forbidden_echo_op.cpp  forbidden_echo_ops.cpp  gltichmode_ops.cpp  hebrew_ops.cpp  moses_ops.cpp  prophecy_chain_ops.cpp  prophecy_ops.cpp  whitexmas_ops.cpp
cpp-v10.1.1/plugins/util/: CMakeLists.txt  assert_ops.cpp  io_debug_ops.cpp  repl_history_ops.cpp  repl_suggest_ops.cpp  stack_ops.cpp
rs-v.0.0.1/crates/woflang-runtime/: Cargo.toml
rs-v.0.0.1/crates/woflang-runtime/src/: interpreter.rs
rs-v.0.0.3/crates/woflang-plugins/: Cargo.toml
rs-v.0.0.3/crates/woflang-plugins/src/: lib.rs
rs-v.0.0.3/crates/woflang-plugins/src/arts/: music.rs
rs-v.0.0.3/crates/woflang-plugins/src/crypto/: modular.rs  primes.rs
rs-v.0.0.3/crates/woflang-plugins/src/data/: mod.rs
rs-v.0.0.3/crates/woflang-plugins/src/games/: chess.rs
rs-v.0.0.3/crates/woflang-plugins/src/graph/: coloring.rs  core.rs  search.rs  weighted.rs
rs-v.0.0.3/crates/woflang-plugins/src/language/: cyrillic.rs  kanji.rs
rs-v.0.0.3/crates/woflang-plugins/src/logic/: mod.rs
rs-v.0.0.3/crates/woflang-plugins/src/markov/: mod.rs
rs-v.0.0.3/crates/woflang-plugins/src/math/: basic.rs  calculus.rs  discrete.rs  expo_log.rs  fractal.rs  geometry.rs  gradient.rs  greek.rs  mod.rs  trig.rs
rs-v.0.0.3/crates/woflang-plugins/src/metaphysics/: duality.rs  entropy.rs  learning.rs  mod.rs  over_unity.rs
rs-v.0.0.3/crates/woflang-plugins/src/neural_chess/: activation.rs  ai.rs  brain.rs  cnn.rs  layers.rs  mod.rs  tensor.rs
rs-v.0.0.3/crates/woflang-plugins/src/quantum/: mod.rs
rs-v.0.0.3/crates/woflang-plugins/src/science/: chemistry.rs
rs-v.0.0.3/crates/woflang-plugins/src/sigils/: chaos.rs  dreaming.rs  egg.rs  forbidden.rs  hebrew.rs  mirror.rs  moses.rs  prophecy.rs  totem.rs  whitexmas.rs
rs-v.0.0.3/crates/woflang-plugins/src/solver/: mod.rs  numeric.rs  pattern.rs  simplify.rs  symbolic.rs
rs-v.0.0.3/crates/woflang-plugins/src/util/: assert.rs  io.rs  stack.rs
rs-v.0.1.1/: ANALOG_MODE_IMPLEMENTATION.md  Cargo.toml  LICENSE-APACHE  README.md  errors.txt  other-instructions.md  sigils-instructions.md
rs-v.0.1.1/crates/woflang-analog/src/: mode.rs
rs-v.0.1.1/crates/woflang-cli/benches/: prime_bench.rs
rs-v.0.1.1/crates/woflang-cli/src/: main.rs
rs-v.0.1.1/crates/woflang-core/src/: block.rs  instruction.rs  lib.rs  opcode.rs
rs-v.0.1.1/crates/woflang-ops/src/: lib.rs  stack.rs
rs-v.0.1.1/crates/woflang-plugins/data/: wof_constants_module.json
rs-v.0.1.1/crates/woflang-plugins/src/analog/: core.rs
rs-v.0.1.1/crates/woflang-plugins/src/arts/: music.rs
rs-v.0.1.1/crates/woflang-plugins/src/crypto/: modular.rs
rs-v.0.1.1/crates/woflang-plugins/src/data/: cyrillic_database.json
rs-v.0.1.1/crates/woflang-plugins/src/language/: mod.rs
rs-v.0.1.1/crates/woflang-plugins/src/logic/: mod.rs
rs-v.0.1.1/crates/woflang-runtime/src/: lib.rs  plugin.rs  tokenizer.rs
rs-v.0.1.1/docs/: end-of-claude-convo.md
rs-v.0.1.1/tests/: temp.md
rs-v.0.1.3/fixed_files/: BUILD_FIX_README.txt  Cargo.toml  config.rs  firewall.rs  main.rs  nrpt.rs  status.rs  status_server.rs  tor_control.rs  tor_manager.rs
rs-v.0.1.3/woflang/crates/woflang-plugins/: Cargo.toml
(+153 files in other folders)
