[workspace]
resolver = "2"
members = [
    "crates/woflang-core",
    "crates/woflang-analog",
    "crates/woflang-runtime",
    "crates/woflang-ops",
    "crates/woflang-plugins",
    "crates/woflang-cli",
]

[workspace.package]
version = "10.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["wofl <wofl@whispr.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wofl/woflang-rs"
description = "A Unicode-native stack-based programming language"
keywords = ["interpreter", "stack-based", "language", "unicode"]
categories = ["compilers", "development-tools"]

[workspace.dependencies]
# Internal crates
woflang-core = { path = "crates/woflang-core" }
woflang-analog = { path = "crates/woflang-analog" }
woflang-runtime = { path = "crates/woflang-runtime" }
woflang-ops = { path = "crates/woflang-ops" }
woflang-plugins = { path = "crates/woflang-plugins" }

# Error handling
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
rustyline = "15"

# Plugin system (optional dynamic loading)
libloading = "0.8"

# SIMD and performance
wide = "0.7"
bytemuck = { version = "1", features = ["derive"] }
bumpalo = { version = "3", features = ["collections"] }

# Randomness and crypto primitives
rand = "0.8"
rand_chacha = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2024_compatibility = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
indexing_slicing = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
